# kubectl-certificate

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/certificate/: __init__.py  certs.py  data.py  secrets.py
src/enroller/: __init__.py  certs.py  data.py  secrets.py  utils.py
