[project]
name = "kubectl-certificate"
version = "0.1.0"
description = "A tool for managing certificates in Kubernetes"
authors = [
    { name = "Piotr Kmiecik", email = "p.kmiecik@otcf.pl" }
]
dependencies = [
    "kubernetes>=31.0.0",
    "black>=24.10.0",
    "typer>=0.12.5",
    "cryptography>=43.0.1",
    "debugpy>=1.8.7",
    "retry>=0.9.2",
]

readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
kubectl-certificate = "certificate:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
source-dir = "src"

[tool.hatch.build.targets.wheel]
packages = ["src/certificate"]
