[project]
name = "kubectl-enroller"
version = "0.1.0"
description = "A tool for managing TLS certificates in Kubernetes"
authors = [
    { name = "Piotr Kmiecik", email = "piotr@kmiecik.it" }
]
dependencies = [
    "kubernetes>=31.0.0",
    "black>=24.10.0",
    "typer>=0.12.5",
    "cryptography>=43.0.1",
    "debugpy>=1.8.7",
    "retry>=0.9.2",
]

readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
kubectl-enroller = "enroller:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
source-dir = "src"

[tool.hatch.build.targets.wheel]
packages = ["src/enroller"]
